http_server/www/index.html: Add '?drawFPS=1' to HelloUI ;

--- a/sources/http_server/www/index.html
+++ b/sources/http_server/www/index.html
@@ -1,13 +1,17 @@
 <head>
-    <title>niLang Toolkit</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.min.css" />
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" /> -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.min.css" /> -->
+  <title>niLang Toolkit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.min.css" />
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/dark.min.css" /> -->
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/light.min.css" /> -->
 </head>
+
 <body>
-<h1>niLang Toolkit</h1>
-<ul>
-  <li><a href="/niLang/bin/web-js/HelloUI_cpp_ra.html">HelloUI_cpp</a> (<a href="/niLang/bin/web-js/HelloUI_cpp_da.html">da</a>)</li>
-  <li><a href="/niLang/bin/web-js/Test_niLang_ra.html">Test_niLang</a> (<a href="/niLang/bin/web-js/Test_niLang_da.html">da</a>)</li>
-</ul>
+  <h1>niLang Toolkit</h1>
+  <ul>
+    <li><a href="/niLang/bin/web-js/HelloUI_cpp_ra.html?drawFPS=1">HelloUI_cpp</a>
+      (<a href="/niLang/bin/web-js/HelloUI_cpp_da.html?drawFPS=1">da</a>)</li>
+    <li><a href="/niLang/bin/web-js/Test_niLang_ra.html">Test_niLang</a> (<a
+        href="/niLang/bin/web-js/Test_niLang_da.html">da</a>)</li>
+  </ul>
+</body>
