emscripten: Moved niUI fonts & cjk fonts to their own files ;

--- a/sources/emscripten/0_niLang_shell.html
+++ b/sources/emscripten/0_niLang_shell.html
@@ -287,6 +287,8 @@
         };
         // Start the app
         aModule.callMain();
+      }).catch(function(aError) {
+        console.error("Module creation error: ", aError);
       });
     });
     </script>
