http_server/www/index.html: Add Test_niUI ;

--- a/sources/http_server/www/index.html
+++ b/sources/http_server/www/index.html
@@ -13,5 +13,7 @@
       (<a href="/niLang/bin/web-js/HelloUI_cpp_da.html?drawFPS=1">da</a>)</li>
     <li><a href="/niLang/bin/web-js/Test_niLang_ra.html">Test_niLang</a> (<a
         href="/niLang/bin/web-js/Test_niLang_da.html">da</a>)</li>
-  </ul>
+        <li><a href="/niLang/bin/web-js/Test_niUI_ra.html">Test_niUI</a> (<a
+          href="/niLang/bin/web-js/Test_niUI_da.html">da</a>)</li>
+    </ul>
 </body>
