niLang: Fix issues on niNoProcess platforms ;

--- a/sources/emscripten/0_niLang_shell.html
+++ b/sources/emscripten/0_niLang_shell.html
@@ -238,6 +238,10 @@
             text = Array.prototype.slice.call(arguments).join(' ');
           }
           console.error(text);
+          if (elPlayerTerminal) {
+            elPlayerTerminal.value += "STDERR>>" + text + "\n";
+            elPlayerTerminal.scrollTop = elPlayerTerminal.scrollHeight; // focus on bottom
+          }
         },
         canvas: (function () {
           var canvas = elPlayerCanvas;
