emscripten: 0_niLang_pre: don't intercept cmd+r / f5 that are used to refresh the page ;

--- a/sources/emscripten/0_niLang_shell.html
+++ b/sources/emscripten/0_niLang_shell.html
@@ -275,6 +275,7 @@
           };
         };
         // Start the app
+        console.log("... aModule.callMain");
         aModule.callMain();
       }).catch(function(aError) {
         console.error("Module creation error: ", aError);
