emscripten/0_niLang_pre.js: Adds an option to enable/disable input

--- a/sources/emscripten/0_niLang_shell.html
+++ b/sources/emscripten/0_niLang_shell.html
@@ -181,6 +181,7 @@
 
       console.log('... createDefaultNiModule');
       var Module = createDefaultNiModule({
+        UseInput: true,
         preRun: [],
         postRun: [],
         notifyHostHandlers: {
