niCURL/tsrc: Trying to get the JSCC tests with overrides to work correctly ;

--- a/sources/http_server/www/index.html
+++ b/sources/http_server/www/index.html
@@ -11,9 +11,11 @@
   <ul>
     <li><a href="/niLang/bin/web-js/HelloUI_cpp_ra.html?drawFPS=1">HelloUI_cpp</a>
       (<a href="/niLang/bin/web-js/HelloUI_cpp_da.html?drawFPS=1">da</a>)</li>
-    <li><a href="/niLang/bin/web-js/Test_niLang_ra.html">Test_niLang</a> (<a
-        href="/niLang/bin/web-js/Test_niLang_da.html">da</a>)</li>
-        <li><a href="/niLang/bin/web-js/Test_niUI_ra.html">Test_niUI</a> (<a
-          href="/niLang/bin/web-js/Test_niUI_da.html">da</a>)</li>
+    <li><a href="/niLang/bin/web-js/Test_niLang_ra.html">Test_niLang</a>
+      (<a href="/niLang/bin/web-js/Test_niLang_da.html">da</a>)</li>
+    <li><a href="/niLang/bin/web-js/Test_niUI_ra.html">Test_niUI</a>
+      (<a href="/niLang/bin/web-js/Test_niUI_da.html">da</a>)</li>
+    <li><a href="/niLang/bin/web-js/Test_niCURL_ra.html">Test_niCURL</a>
+      (<a href="/niLang/bin/web-js/Test_niCURL_da.html">da</a>)</li>
     </ul>
 </body>
