niCURL: Fix web-js version and update JSCC override tests ;

--- a/sources/http_server/www/index.html
+++ b/sources/http_server/www/index.html
@@ -11,11 +11,24 @@
   <ul>
     <li><a href="/niLang/bin/web-js/HelloUI_cpp_ra.html?drawFPS=1">HelloUI_cpp</a>
       (<a href="/niLang/bin/web-js/HelloUI_cpp_da.html?drawFPS=1">da</a>)</li>
-    <li><a href="/niLang/bin/web-js/Test_niLang_ra.html">Test_niLang</a>
-      (<a href="/niLang/bin/web-js/Test_niLang_da.html">da</a>)</li>
     <li><a href="/niLang/bin/web-js/Test_niUI_ra.html">Test_niUI</a>
       (<a href="/niLang/bin/web-js/Test_niUI_da.html">da</a>)</li>
-    <li><a href="/niLang/bin/web-js/Test_niCURL_ra.html">Test_niCURL</a>
-      (<a href="/niLang/bin/web-js/Test_niCURL_da.html">da</a>)</li>
-    </ul>
+    <li>
+      Test_niLang:
+      <ul>
+        <li><a href="/niLang/bin/web-js/Test_niLang_ra.html?hamx=:niLang,Test_niLang,BUILD=ra">(ra) all</a></li>
+        <li><a href="/niLang/bin/web-js/Test_niLang_da.html?hamx=:niLang,Test_niLang,BUILD=da">(da) all</a></li>
+      </ul>
+    </li>
+    <li>
+      Test_niCURL:
+      <ul>
+        <li><a href="/niLang/bin/web-js/Test_niCURL_ra.html?hamx=:niLang,Test_niCURL,BUILD=ra">(ra) all</a></li>
+        <li><a href="/niLang/bin/web-js/Test_niCURL_da.html?hamx=:niLang,Test_niCURL,BUILD=da">(da) all</a></li>
+        <li><a href="/niLang/bin/web-js/Test_niCURL_da.html?hamx=:niLang,Test_niCURL,BUILD=da&FIXTURE=FCURLFetch">(da) FIXTURE=FCURLFetch</a></li>
+        <li><a href="/niLang/bin/web-js/Test_niCURL_da.html?hamx=:niLang,Test_niCURL,BUILD=da&FIXTURE=FCURLFetch&niCURL.TraceFetch=1">(da) FIXTURE=FCURLFetch&niCURL.TraceFetch=1</a></li>
+        <li><a href="/niLang/bin/web-js/Test_niCURL_da.html?hamx=:niLang,Test_niCURL,BUILD=da&FIXTURE=FCURLFetch-JSCC*&niCURL.TraceFetch=1">(da) FIXTURE=FCURLFetch-JSCC*&niCURL.TraceFetch=1</a></li>
+      </ul>
+    </li>
+  </ul>
 </body>
