niSound: Various code cleanup & Add a Silent sound driver ;

--- a/sources/http_server/www/index.html
+++ b/sources/http_server/www/index.html
@@ -30,5 +30,13 @@
         <li><a href="/niLang/bin/web-js/Test_niCURL_da.html?hamx=:niLang,Test_niCURL,BUILD=da&FIXTURE=FCURLFetch-JSCC*&niCURL.TraceFetch=1">(da) FIXTURE=FCURLFetch-JSCC*&niCURL.TraceFetch=1</a></li>
       </ul>
     </li>
+    <li>
+      Test_niSound:
+      <ul>
+        <li><a href="/niLang/bin/web-js/Test_niSound_ra.html?hamx=:niLang,Test_niSound,BUILD=ra">(ra) all</a></li>
+        <li><a href="/niLang/bin/web-js/Test_niSound_da.html?hamx=:niLang,Test_niSound,BUILD=da">(da) all</a></li>
+        <li><a href="/niLang/bin/web-js/Test_niSound_da.html?hamx=:niLang,Test_niSound,BUILD=da&FIXTURE=FSoundFactoryWidget,ClickWAV">(da) FIXTURE=FSoundFactoryWidget,ClickWAV</a></li>
+      </ul>
+    </li>
   </ul>
 </body>
