niLang: Add Test_Coro.cpp ;

--- a/sources/http_server/www/index.html
+++ b/sources/http_server/www/index.html
@@ -18,6 +18,7 @@
       <ul>
         <li><a href="/niLang/bin/web-js/Test_niLang_ra.html?hamx=:niLang,Test_niLang,BUILD=ra">(ra) all</a></li>
         <li><a href="/niLang/bin/web-js/Test_niLang_da.html?hamx=:niLang,Test_niLang,BUILD=da">(da) all</a></li>
+        <li><a href="/niLang/bin/web-js/Test_niLang_ra.html?hamx=:niLang,Test_niLang,BUILD=ra&FIXTURE=FProcess">(ra) FIXTURE=FProcess</a></li>
       </ul>
     </li>
     <li>
